--- a/1_HTML/실습문제1.html
+++ b/1_HTML/실습문제1.html
@@ -6,17 +6,15 @@
     <title>포트폴리오</title>
   </head>
   <body>
-    <img src="../resources/pubao.jpg" width="320" height="240" alt="" />
+    <img src="../resources/pubao.jpg" width="320" alt="" />
 
     <h1>푸바오</h1>
-    <p>
-      할부지 껌딱지 <br /><br />
 
-      사는 곳, 용인 <br /><br />
+    <p>할부지 껌딱지</p>
+    <p>사는 곳, 용인</p>
 
-      <a href="https://github.com/" target="_blank">Github</a> &nbsp;&nbsp;
-      <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-    </p>
+    <a href="https://github.com/" target="_blank">Github</a> &nbsp;&nbsp;
+    <a href="https://www.instagram.com/" target="_blank">Instagram</a>
 
     <h2>Who am I?</h2>
     <p>개발에 관심이 많아 개발자가 되기 위해 할부지 몰래 코딩 중입니다.</p>
