--- a/1_HTML/06_폼태그.html
+++ b/1_HTML/06_폼태그.html
@@ -55,7 +55,7 @@
       <fieldset>
         <legend>성별</legend>
         <label
-          ><input type="radio" name="gender" value="M" checked /> 남자 <br
+          ><input type="radio" name="gender" value="M" /> 남자 <br
         /></label>
         <label><input type="radio" name="gender" value="F" /> 여자</label>
       </fieldset>
@@ -67,11 +67,10 @@
         >
         <br />
         <label
-          ><input type="checkbox" name="interest" value="sing" checked />
-          노래 </label
+          ><input type="checkbox" name="interest" value="sing" /> 노래 </label
         ><br />
         <label
-          ><input type="checkbox" name="interest" value="drama" checked />
+          ><input type="checkbox" name="interest" value="drama" />
           드라마 </label
         ><br />
         <label
@@ -84,6 +83,44 @@
         <br />
       </fieldset>
       <input type="submit" value="전송" />
+      <input type="reset" value="초기화" />
+      <!--초기 세팅값으로 변경-->
+    </form>
+
+    <h3>type="hidden | file"</h3>
+    <form action="">
+      <input type="hidden" name="hiddenvalue" value="1234" />
+      <label for="uploadFile"></label>
+      <input
+        type="file"
+        id="uploadFile"
+        name="upload"
+        multiple
+        accept="image/*, .pdf"
+      />
+      <input type="submit" value="전송" />
+    </form>
+
+    <h3>type="datetime-local | week | month | date | time"</h3>
+    <form action="">
+      <label for="datetime-local">datetime : </label>
+      <input type="datetime-local" id="datetime-local" />
+
+      <br /><br />
+      <label for="week"> week : </label>
+      <input type="week" id="week" />
+
+      <br /><br />
+      <label for="month"> month : </label>
+      <input type="month" id="month" />
+
+      <br /><br />
+      <label for="date"> date : </label>
+      <input type="date" id="date" />
+
+      <br /><br />
+      <label for="time"> time : </label>
+      <input type="time" id="time" />
     </form>
   </body>
 </html>
