--- a/1_HTML/06_폼태그.html
+++ b/1_HTML/06_폼태그.html
@@ -122,5 +122,80 @@
       <label for="time"> time : </label>
       <input type="time" id="time" />
     </form>
+
+    <h3>type="email | url | search | tel"</h3>
+    <form action="">
+      <label for="email"> 이메일 : </label>
+      <input type="email" id="email" name="email" />
+
+      <br /><br />
+      <label for="url"> 사이트 주소 : </label>
+      <input type="url" id="url" />
+
+      <br /><br />
+      <label for="search"> 검색 : </label>
+      <input type="search" id="search" />
+
+      <br /><br />
+      <label for="tel"> 전화번호 : </label>
+      <input type="tel" id="tel" />
+
+      <br /><br />
+      <input type="submit" value="전송" />
+    </form>
+
+    <h3>type="number | range | color"</h3>
+    <form action="">
+      <label for="amount"> 수량 : </label>
+      <input type="number" id="amount" min="0" max="10" step="2" />
+
+      <br /><br />
+      <label for="point"> 포인트 : </label>
+      <input type="range" id="point" min="0" max="1000" step="100" />
+
+      <br /><br />
+      <label for="color"> 색상 : </label>
+      <input type="color" id="color" />
+
+      <input type="button" value="버튼" onclick="alert('버튼 클릭!')" />
+    </form>
+
+    <h2>select 태그</h2>
+    <form action="">
+      <label for="national"> 국적 : </label>
+      <select name="national" id="national">
+        <optgroup label="아시아">
+          <option value="kr">한국</option>
+          <option value="ch">중국</option>
+          <option value="jp">일본</option>
+        </optgroup>
+
+        <optgroup label="기타">
+          <option value="us">미국</option>
+          <option value="fr">프랑스</option>
+        </optgroup>
+        <option selected>-----------</option>
+      </select>
+    </form>
+
+    <h2>textarea 태그</h2>
+    <form action="">
+      <textarea
+        name=""
+        id=""
+        cols="30"
+        rows="10"
+        style="resize: none"
+      ></textarea>
+
+      <!-- input type="submit"과 같은 역할 -->
+      <button type="submit">전송</button>
+
+      <!-- input type="reset"과 같은 역할 -->
+      <button type="reset">초기화</button>
+
+      <!-- input type="button"과 같은 역할 -->
+      <button type="button" onclick="alert('버튼 클릭!')">버튼</button>
+    </form>
   </body>
 </html>
