--- a/2_CSS/05_배경스타일.html
+++ b/2_CSS/05_배경스타일.html
@@ -33,5 +33,9 @@
       itaque culpa dolor ducimus similique, repudiandae ipsa, voluptatibus
       possimus pariatur id error.
     </div>
+
+    <h2>배경 이미지 테스트</h2>
+    <div id="test"></div>
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
