--- a/2_CSS/06_레이아웃스타일.html
+++ b/2_CSS/06_레이아웃스타일.html
@@ -28,10 +28,57 @@
     <div class="display display-inline">5 번째 영역</div>
 
     <h4>인라인 레벨 요소를 블록 레벨 요소로 변경</h4>
-    <div class="display display-block">1 번째 영역</div>
-    <div class="display display-block">2 번째 영역</div>
-    <div class="display display-block">3 번째 영역</div>
-    <div class="display display-block">4 번째 영역</div>
-    <div class="display display-block">5 번째 영역</div>
+    <!-- span.display.display-inline*5{$ 번째 영역} -->
+    <span class="display display-block">1 번째 영역</span>
+    <span class="display display-block">2 번째 영역</span>
+    <span class="display display-block">3 번째 영역</span>
+    <span class="display display-block">4 번째 영역</span>
+    <span class="display display-block">5 번째 영역</span>
+
+    <h4>블록 레벨 요소를 인라인 블록 레벨 요소로 변경</h4>
+    <!-- div.display.display-inline-block*5 -->
+    <div class="display display-inline-block">1 번째 영역</div>
+    <div class="display display-inline-block">2 번째 영역</div>
+    <div class="display display-inline-block">3 번째 영역</div>
+    <div class="display display-inline-block">4 번째 영역</div>
+    <div class="display display-inline-block">5 번째 영역</div>
+
+    <h3>padding, margin</h3>
+    <p>
+      - padding : 테두리와 콘텐츠 영역 사이의 여백<br />
+      - margin : 요소와 요소 사이의 여백
+    </p>
+    <h4>padding</h4>
+    <div class="space" id="padding1">전체 padding</div>
+    <br />
+    <div class="space" id="padding2">부분 padding</div>
+
+    <h4>margin</h4>
+    <div class="space" id="margin1">전체 margin</div>
+    <div class="space" id="margin2">부분 margin</div>
+
+    <h2>테두리 스타일</h2>
+    <div class="border" id="border1"></div>
+    <div class="border" id="border2"></div>
+    <div class="border" id="border3"></div>
+
+    <h2>포지셔닝</h2>
+    <p>CSS를 이용해서 여러 요소를 원하는 위치에 적절하게 배치하는 것</p>
+    <h3>float, clear</h3>
+    <div class="float">001</div>
+    <div class="float">002</div>
+    <div class="float">003</div>
+    <div class="float">004</div>
+    <div class="float">005</div>
+
+    <hr style="clear: both" />
+
+    <h3>position</h3>
+    <div id="outer">
+      <div id="first"></div>
+      <div id="second"></div>
+    </div>
+
+    <div id="fixed"></div>
   </body>
 </html>
