혼자서 연습

--- a/2_CSS/레이아웃연습.html
+++ b/2_CSS/레이아웃연습.html
@@ -8,11 +8,18 @@
     <link rel="stylesheet" href="./css/레이아웃연습.css" />
   </head>
   <body>
-    <div class="profile-zone">
-      <img src="../resources/pubao.jpg" alt="" />
-      <p>@푸바오</p>
-      <a href="">github</a>
-      <a href="">instagram</a>
-    </div>
+    <h2>미디어쿼리 연습</h2>
+    <p id="style1">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus
+      veritatis dolorem voluptates alias nobis tempora dolores quidem ullam.
+      Minus sit deserunt quos illo dolores cupiditate itaque. Reiciendis ea amet
+      dolor.
+    </p>
+    <p id="style2">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea hic quos
+      quasi eligendi cupiditate suscipit dignissimos, necessitatibus iure sint
+      eius atque sunt praesentium eveniet esse quas doloremque? Rem, dolor
+      consequuntur!
+    </p>
   </body>
 </html>
