--- a/2_CSS/미디어쿼리연습.html
+++ b/2_CSS/미디어쿼리연습.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/reset.css" />
-    <link rel="stylesheet" href="./css/미디어쿼리연습.css" />
+    <link rel="stylesheet" href="/2_CSS/css/미디어쿼리연습.css" />
   </head>
   <body>
     <section class="inline-block" id="sec1">
