--- a/3_JavaScript/basic/실습문제2.html
+++ b/3_JavaScript/basic/실습문제2.html
@@ -51,9 +51,7 @@
       -->
     <script>
       const age = prompt("나이를 입력하세요");
-      if (age >= 65) {
-        console.log("입장료는 무료입니다");
-      } else if (age < 8) {
+      if (age >= 65 || age < 8) {
         console.log("입장료는 무료입니다");
       } else {
         console.log("입장료는 10,000원 입니다");
