--- a/3_JavaScript/basic/실습문제1.html
+++ b/3_JavaScript/basic/실습문제1.html
@@ -6,6 +6,14 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- 변수 명명 규칙 
+    1) 변수명에는 문자, 숫자, 기호는 ( $ , _ ) 만 사용
+    2) 첫글자에는 숫자 금지
+    3) 예약어(const, if, switch, ...) 금지
+    4) 표기법대로 사용 - camelCase(낙타표기법)
+    5) 상수(const로 표기한 것 말고)는 대문자 + snake_case(언더바 표기법)
+    -->
+
     <!-- 
         Q1. 킬로그램(kg)을 파운드(lb)로 환산하여 console에 출력하시오.
            - 파운드 = 킬로그램 * 2.2
@@ -80,10 +88,11 @@
           양꼬치 64인분과 음료수 6개를 먹었다면 총얼마를 지불해야 하는지 console에 출력하시오.
      -->
     <script>
-      const sheep = 12000; // 양꼬치 1인분의 가격
+      const lamb = 12000; // 양꼬치 1인분의 가격
       const drink = 2000; // 음료수 1병의 가격
       const drinkAmount = 6; // 마신 음료수의 갯수
-      const totalAmount = 64; // 먹은 양꼬치의 갯수
+      const totalLambAmount = 64; // 먹은 양꼬치의 갯수
+      const total = totalLambAmount * lamb;
       const freedrinkAmount = parseInt(totalAmount / 10); // 총 마신 음료수 갯수 중 서비스 음료수의 갯수
       console.log("서비스 음료수는 " + freedrinkAmount + "병 입니다.");
       console.log(
@@ -91,7 +100,7 @@
       );
       console.log(
         "양꼬치 총 금액은 " +
-          (sheep * totalAmount + (drinkAmount - freedrinkAmount) * 2000) +
+          (total + (drinkAmount - freedrinkAmount) * 2000) +
           "원 입니다."
       );
     </script>
