--- a/3_JavaScript/basic/실습문제2.html
+++ b/3_JavaScript/basic/실습문제2.html
@@ -64,6 +64,21 @@
             예) 12월은 겨울입니다.
      -->
     <script>
+      // if문
+      // if (month >= 3 && month < 6) {
+      //   console.log(month + "월은 봄입니다.");
+      // } else if (6 <= month && month < 9) {
+      //   console.log(month + "월은 여름입니다.");
+      // } else if (9 <= month && month <= 11) {
+      //   console.log(month + "월은 가을입니다.");
+      // } else if (month == 12 || month == 1 || month == 2) {
+      //   console.log(month + "월은 겨울입니다.");
+      // } else {
+      //   console.log("정확한 월을 입력하세요.");
+      // }
+
+      // prompt 로 입력받으면 string 으로 입력받음
+      // case문 비교 하려면 parseInt나 Number 로 숫자로 바꿔야함
       const month = prompt("월을 입력하세요");
       switch (parseInt(month)) {
         case 3:
