실습문제1_내 풀이
실습문제1 내 풀이

--- a/2_CSS/실습문제1.html
+++ b/2_CSS/실습문제1.html
@@ -3,17 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>프로필 카드</title>
-    <link rel="stylesheet" href="../2_CSS/css/실습문제1.css" />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/실습문제1.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="profile-card">
-      <img src="../resources/pubao.jpg" alt="" width="300" />
+    <div class="profileCard">
+      <img src="/resources/pubao.jpg" alt="" />
       <h1>@푸바오</h1>
-      <a id="gitLink" href="https://github.com" target="_blank">GitHub</a>
-      <a id="instaLink" href="https://www.instagram.com/" target="_blank"
-        >Instagram</a
-      >
+      <a href="www.github.com">GitHub</a>
+      <a href="www.instagram.com">Instagram</a>
     </div>
   </body>
 </html>
