--- a/3_JavaScript/basic/연습/연습1.html
+++ b/3_JavaScript/basic/연습/연습1.html
@@ -8,6 +8,7 @@
   <body>
     <script>
       for (let i = 2; i <= 9; i++) {
+        console.log(i + "단");
         for (let j = 1; j <= 9; j++) {
           console.log(i + " * " + j + " = " + i * j);
         }
