--- a/3_JavaScript/basic/실습문제4.html
+++ b/3_JavaScript/basic/실습문제4.html
@@ -19,15 +19,13 @@
     <!-- Q2. 1 ~ 1000 정수 중 3의 배수의 합계를 출력하세요 -->
     <script>
       console.log("Q2 ----------------------------");
+      let total = 0;
       for (let i = 1; i <= 1000; i++) {
         if (i % 3 == 0) {
-          i += i;
+          total += i;
         }
-        if (i % 3 != 0) {
-          continue;
-        }
-        console.log(i);
       }
+      console.log(total);
       console.log("----------------------------");
     </script>
 
@@ -55,18 +53,21 @@
       // 소수 : 1 또는 자신으로만 나뉘어지는 수
       console.log("Q5 ----------------------------");
       // 배열 하나 생성
+      // 안에서 조건을 걸어서 자기 자신을 만나는 데까지만 나누는 계산!
+      // 자기자신으로 나누어지는 수까지 true가 없을 경우 <- 저 배열에 추가
+
+      // 아직 못풀었습니당.. 계속 해보겠습니다
       const decimal = [];
       for (let i = 1; i <= 10; i++) {
-        for (let j = 1; j <= 10; j++) {
-          // 안에서 조건을 걸어서 자기 자신을 만나는 데까지만 나누는 계산!
-          // 자기자신으로 나누어지는 수까지 true가 없을 경우 <- 저 배열에 추가
-          console.log(i, j, i % j == 0);
-          // if ()
-          if ((i % j == 0) == true) {
-            console.log(i);
+        for (let j = 1; j <= i; j++) {
+          // console.log(i, j, i % j == 0);
+          if ((i % j == 0) = true) {
+            decimal[i] = i;
             break;
           }
+          if ((i % j == 0) = false) continue;
         }
+        console.log(decimal);
       }
 
       console.log("----------------------------");
@@ -85,13 +86,13 @@
     <!-- Q7. 배열에 있는 데이터들로 합계와 평균을 출력하세요 -->
     <script>
       const nums3 = [90, 85, 70, 86, 97];
-      let total = 0;
+      let total2 = 0;
       console.log("Q7 ----------------------------");
       for (let i = 0; i < nums3.length; i++) {
-        total += nums3[i];
+        total2 += nums3[i];
       }
-      console.log("총합 : " + total);
-      console.log("평균 : " + total / nums3.length);
+      console.log("총합 : " + total2);
+      console.log("평균 : " + total2 / nums3.length);
       console.log("----------------------------");
     </script>
 
@@ -131,14 +132,14 @@
         [98, 90, 77, 97], // scores[2] []
       ];
       console.log("Q10 ----------------------------");
-      let total2 = 0;
+      let total3 = 0;
       for (let i = 0; i < scores.length; i++) {
         for (let j = 0; j < scores[0].length; j++) {
           total2 = total2 + scores[i][j];
         }
-        console.log("총합 : " + total2);
-        console.log("평균 : " + total2 / scores[0].length);
-        total2 = 0;
+        console.log("총합 : " + total3);
+        console.log("평균 : " + total3 / scores[0].length);
+        total3 = 0;
       }
       console.log("----------------------------");
     </script>
