--- a/3_JavaScript/basic/실습문제4_해설.html
+++ b/3_JavaScript/basic/실습문제4_해설.html
@@ -158,11 +158,23 @@
 
     <!-- Q10. 2차원 배열에는 3명의 학생의 4과목 성적이 들어 있습니다. 각 학생들의 합계와 평균을 출력하세요 -->
     <script>
+      console.log("Q10 ----------------------------");
       const scores = [
         [83, 90, 70, 87],
         [87, 93, 62, 83],
         [98, 90, 77, 97],
       ];
+      let total2 = 0;
+      for (let i = 0; i < scores.length; i++) {
+        for (let j = 0; j < scores[i].length; j++) {
+          // console.log(scores[i][j]);
+          total2 += scores[i][j];
+        }
+        console.log(`합계 : ${total2}`);
+        console.log(`평균 : ${total2 / scores[i].length}`);
+        total2 = 0;
+        // console.log(scores[i]);
+      }
     </script>
   </body>
 </html>
