--- a/3_JavaScript/object/실습문제1.html
+++ b/3_JavaScript/object/실습문제1.html
@@ -124,10 +124,12 @@
         const arr = la1.split(",");
         console.log(arr[1]);
 
-        // console.log(arr.length);
-        // for (let i = 0; i < arr.length; i++) {
-        //   const li = document.createElement("li");
-        // }
+        const ol = document.createElement("ol");
+
+        console.log(arr.length);
+        for (let i = 0; i < arr.length; i++) {
+          const li = document.createElement("li");
+        }
       }
     </script>
 
