--- a/practice/연습.html
+++ b/practice/연습.html
@@ -3,11 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>끄아앙</title>
+    <title>끄아아아앙</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/연습.css" />
   </head>
   <body>
-    <div class="content">1</div>
+    <header>
+      <h1>LOGO</h1>
+      <nav>
+        <a href="#section1">Heading 1</a>
+        <a href="#section2">Heading 2</a>
+        <a href="#section3">Heading 3</a>
+      </nav>
+    </header>
+    <main>
+      <div class="section" id="section1">
+        <h2>Heading 1</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          unde quos ex vitae quam enim at sunt corporis consectetur ratione
+          maiores sit, rerum est dolor, eos commodi animi ea in.
+        </p>
+      </div>
+      <div class="section" id="section2">
+        <h2>Heading 2</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          unde quos ex vitae quam enim at sunt corporis consectetur ratione
+          maiores sit, rerum est dolor, eos commodi animi ea in.
+        </p>
+      </div>
+      <div class="section" id="section3">
+        <h2>Heading 3</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+          unde quos ex vitae quam enim at sunt corporis consectetur ratione
+          maiores sit, rerum est dolor, eos commodi animi ea in.
+        </p>
+      </div>
+      <a href="#section1" class="top">TOP</a>
+    </main>
   </body>
 </html>
