연습2 (풀었음)
css 실습문제3 풀이 (시험대비)

--- a/practice/연습2.html
+++ b/practice/연습2.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="./css/연습2.css" />
   </head>
   <body>
-    <header>
+    <header id="black-box">
       <h1>LOGO</h1>
       <nav>
-        <a href="">Menu 1</a>
-        <a href="">Menu 2</a>
-        <a href="">Menu 3</a>
-        <a href="">Menu 4</a>
-        <a href="">Menu 5</a>
+        <a href="#">Menu 1</a>
+        <a href="#">Menu 2</a>
+        <a href="#">Menu 3</a>
+        <a href="#">Menu 4</a>
+        <a href="#">Menu 5</a>
       </nav>
     </header>
 
