실습문제4 연습

--- a/3_JavaScript/object/실습문제4.html
+++ b/3_JavaScript/object/실습문제4.html
@@ -12,7 +12,7 @@
         <ul style="list-style-type: none">
           <li>
             <label
-              >* 아이디 : <input type="text" id="userId" />
+              >* 아이디 : <input type="text" id="userId" name="userId" />
               <p id="waringId">
                 첫글자는 반드시 영문자로, 그리고 영문자, 숫자 포함하여 총
                 4~12자로 입력하시오.
@@ -21,7 +21,7 @@
           </li>
           <li>
             <label
-              >* 비밀번호 : <input type="text" id="userPwd" />
+              >* 비밀번호 : <input type="text" id="userPwd" name="userPwd" />
               <p id="waringPwd">
                 영문자, 숫자, 특수문자 포함하여 총 8~15자로 입력하시오.
               </p></label
@@ -30,7 +30,8 @@
 
           <li>
             <label
-              >* 비밀번호 확인 : <input type="text" id="pwdCheck" />
+              >* 비밀번호 확인 :
+              <input type="text" id="pwdCheck" name="pwdCheck" />
               <p id="waringPwd2">위의 비밀번호화 일치하게 입력하시오.</p></label
             >
           </li>
