--- a/practice/연습3.html
+++ b/practice/연습3.html
@@ -27,7 +27,7 @@
             <input type="password" id="userPwdCheck" /></label
           ><br />
 
-          <button type="submit">회원가입</button>
+          <button type="submit" id="finish">회원가입</button>
           <button type="reset">취소</button>
         </fieldset>
       </form>
