--- a/4_jQuery/04_이벤트.html
+++ b/4_jQuery/04_이벤트.html
@@ -38,6 +38,22 @@
       </p>
       <!-- val() -->
       <textarea id="textarea2" cols="70" rows="5"></textarea>
+
+      <h3>동적으로 id조건 확인</h3>
+      <p>
+        - 첫 글자는 반드시 영문 소문자<br />
+        - 영문 소문자와 숫자로만 이루어진다<br />
+        - 총 4 ~ 12글자
+        <label for="userID">아이디 : </label>
+        <input type="text" id="userID" />
+        <span id="idCheck"></span>
+      </p>
+
+      <h2>3. trigger() 메서드</h2>
+      <div id="area3" class="area">
+        Clicked Number : <span id="counter2">0</span>
+      </div>
+      <button id="btn">실행 확인</button>
     </div>
 
     <script src="/4_jQuery/js/04_이벤트.js"></script>
